--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -12,6 +12,9 @@
     padding: 0px;
     height: 40px;
     margin-right: 24px;
+    @include respond(mobile){
+      margin-right: 0px;
+    }
     .logo_wrapper {
       width: 40px;
       height: 40px;
