--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,7 +42,7 @@
 
 body {
   background-color: #ffffff;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 *svg:hover path {
   fill: #f23b51;
